test/spec_vectors/load/fail/module_17.wat
(module (memory 1) (func $load16_s_i32 (i32.load16_s (i32.const 0))))